add sign in function

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,6 +5,7 @@
             <li><%= link_to "Users",   '/users' %></li>
             <li><%= link_to "Conditions",   '/conditions' %></li>
             <li><%= link_to "Preferences", '/preferences' %></li>
+            <li><%= link_to "Sign in", '/users/new' %></li>
           </ul>
         </nav>
       </div>
