Build model association and edit navbar

--- a/app/views/conditions/index.html.erb
+++ b/app/views/conditions/index.html.erb
@@ -1,14 +1,13 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Conditions</h1>
+<h1>Room Conditions</h1>
 
 <table>
   <thead>
     <tr>
-      <th>location</th>
-      <th>start</th>
-      <th>end</th>
-      <th>user id</th>
+      <th>Location</th>
+      <th>Start Date</th>
+      <th>End Date</th>
       <th colspan="4"></th>
     </tr>
   </thead>
@@ -19,7 +18,6 @@
         <td><%= con.location %></td>
         <td><%= con.start %></td>
         <td><%= con.end %></td>
-        <td><%= con.userid %></td>
       </tr>
     <% end %>
   </tbody>
