--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,9 +2,10 @@
       <div class="container">
         <nav>
           <ul class="nav navbar-nav navbar-right">
+            <li><%= link_to "Home",   '/' %></li>
             <li><%= link_to "Users",   '/users' %></li>
-            <li><%= link_to "Conditions",   '/conditions' %></li>
-            <li><%= link_to "Preferences", '/preferences' %></li>
+            <!--<li><%= link_to "Conditions",   '/conditions' %></li>-->
+            <!-- <li><%= link_to "Preferences", '/preferences' %></li>-->
             <li><%= link_to "Sign in", '/users/new' %></li>
           </ul>
         </nav>
