--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,7 @@
             <li><%= link_to "Users",   '/users' %></li>
             <!--<li><%= link_to "Conditions",   '/conditions' %></li>-->
             <!-- <li><%= link_to "Preferences", '/preferences' %></li>-->
-            <li><%= link_to "Sign in", '/users/new' %></li>
+            <li><%= link_to "Sign up", '/users/new' %></li>
           </ul>
         </nav>
       </div>
