--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,41 +1,41 @@
-<%= form_with(model: user) do |form| %>
-  <% if user.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(user.errors.count, "error") %> prohibited this user from being saved:</h2>
+<div class="row">
+  <div class='col-sm-5'>
+    <%= form_with(model: user) do |f| %>
+      <% if user.errors.any? %>
+        <div id="error_explanation">
+          <h2><%= pluralize(user.errors.count, "error") %> prohibited this user from being saved:</h2>
+    
+          <ul>
+            <% user.errors.each do |error| %>
+            
+              <li><%= error.message %></li>
+            <% end %>
+          </ul>
+        </div>
+      <% end %>
+      <div class="form-group">
+        <%= f.text_field :name, class: "form-control", placeholder: "User Name" %>
+      </div>
 
-      <ul>
-        <% user.errors.each do |error| %>
-        
-          <li><%= error.message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
+      <div class="form-group">
+        <%= f.password_field :name, class: "form-control", placeholder: "Password" %>
+      </div>
 
-  <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name %>
+      <div class="form-group">
+        <%= f.email_field :email, class: "form-control", placeholder: "Email" %>
+      </div>
+
+      <div class="form-group">
+        <%= f.select :gender, [ 'MALE', 'FEMALE' ], :prompt => 'Select One'%>
+      </div>
+
+      <%= f.submit "Sign Up", class: "btn btn-primary" %>
+    <% end %>
   </div>
+</div>
 
-  <div class="field">
-    <%= form.label :password %>
-    <%= form.text_field :password %>
-  </div>
 
-  <div class="field">
-    <%= form.label :email %>
-    <%= form.text_field :email %>
-  </div>
 
-  <div class="field">
-    <%= form.label :gender %>
-    <%= form.text_field :gender %>
-  </div>
 
   
-  <div class="actions">
-    <%= form.submit %>
-  </div>
 
-  
-<% end %>
