--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -30,6 +30,7 @@
       </div>
 
       <%= f.submit "Sign Up", class: "btn btn-primary" %>
+      <%= link_to "Sign In", new_session_path %>
     <% end %>
   </div>
 </div>
