--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,10 @@
     <%= render 'layouts/header' %>
     
     <div class="container">
+      <% if flash[:notice] %>
+        <div class="alert alert-info"> <%= flash[:notices]%> </div>
+      <% end -%>
+      
       <%= yield %>
     </div>
   
