fixed sign in/up bugs and refactoring

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    <%= render 'layouts/header' %>
+    <%= render 'layouts/header', user: @user%>
     
     <div class="container">
       <% if flash[:notice] %>
