--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,19 +1,20 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
+  <nav>
       <div class="container">
-        <nav>
-          <ul class="nav navbar-nav navbar-right">
+        <div class="collapse navbar-collapse nav-submenu-color collapse" id="bs-navbar-collapse-1">
+          <ul class="nav navbar-nav navbar-right custom">
             <li><%= link_to "Home",   '/' %></li>
             <li><%= link_to "Users",   '/users' %></li>
             <!--<li><%= link_to "Conditions",   '/conditions' %></li>-->
             <!-- <li><%= link_to "Preferences", '/preferences' %></li>-->
-            <li><%= link_to "Sign up", '/users/new' %></li>
             <% if session[:user_id] %>
-              <li><%= link_to "#{@user.name}, logout", session_path(@user), method: 'delete'%></li>
+              <li><%= link_to "id: #{session[:user_id]}, logout", new_session_path, method: 'delete'%></li>
             <% else %>
               <li><%= link_to "Sign in", new_session_path %></li>
             <%end%>
             
           </ul>
-        </nav>
+        </div>
       </div>
+  </nav>
 </header>
