--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,24 +1,20 @@
 <div class="row">
   <div class='col-sm-5'>
-    <%= form_with(model: user) do |f| %>
-      <% if user.errors.any? %>
-        <div id="error_explanation">
-          <h2><%= pluralize(user.errors.count, "error") %> prohibited this user from being saved:</h2>
-    
-          <ul>
-            <% user.errors.each do |error| %>
-            
-              <li><%= error.message %></li>
-            <% end %>
-          </ul>
-        </div>
-      <% end %>
+    <%= form_for @user, url: users_path, method: :post do |f| %>
+      <div class="form-group">
+        <ul class="list-unstyled">
+          <% @user.errors.messages.values.flatten.each do |error| %>
+            <li><i class="fa fa-exclamation-circle"></i> <%= error %></li>
+          <% end -%>
+        </ul>
+      </div>
+
       <div class="form-group">
         <%= f.text_field :name, class: "form-control", placeholder: "User Name" %>
       </div>
 
       <div class="form-group">
-        <%= f.password_field :name, class: "form-control", placeholder: "Password" %>
+        <%= f.password_field :password, class: "form-control", placeholder: "Password" %>
       </div>
 
       <div class="form-group">
@@ -26,11 +22,12 @@
       </div>
 
       <div class="form-group">
-        <%= f.select :gender, [ 'MALE', 'FEMALE' ], :prompt => 'Select One'%>
+        <%= f.select :gender, [ 'Male', 'Female' ], :prompt => 'Select One'%>
       </div>
 
       <%= f.submit "Sign Up", class: "btn btn-primary" %>
       <%= link_to "Sign In", new_session_path %>
+
     <% end %>
   </div>
 </div>
