--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,21 +6,20 @@
 <table>
   <thead>
     <tr>
+      <th>id</th>
       <th>Name</th>
       <th>Email</th>
       <th>Gender</th>
-
     </tr>
   </thead>
 
   <tbody>
     <% @users.each do |user| %>
       <tr>
-
+        <td><%= user.id %></td>
         <td><%= user.name %></td>
         <td><%= user.email %></td>
         <td><%= user.gender %></td>
-
       </tr>
     <% end %>
   </tbody>
