Refine user and preference models

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -29,7 +29,7 @@
         <%= f.select :gender, [ 'Male', 'Female', 'Prefer not to answer' ], :prompt => 'Select Gender'%>
       </div>
 
-      <%= f.submit "Sign Up", class: "btn btn-primary" %>
+      <%= f.submit "Sign Up", class: "btn btn-dark" %>
       <!--<%= link_to "Sign In", new_session_path %>-->
 
     <% end %>
