--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class='col-sm-5'>
-    <%= form_for @user, url: users_path, method: :post do |f| %>
+    <%= form_for @user, url: users_path, method: :post, local: true do |f| %>
       <div class="form-group">
         <ul class="list-unstyled">
           <% @user.errors.full_messages.each do |msg| %>
