--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,9 +1,14 @@
 // Place all the styles related to the welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
 .home-form{
     background-color: rgb(238, 233, 161);
-    background-size: cover;
-    height: 200px;
+    height: 400px;
     width: 100%;
+}
+
+.home-feature{
+    background-color: rgb(161, 238, 231);
+    height: 300px;
 }
