--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,8 +17,7 @@
 
   <body>
     <%= render 'layouts/header', user: @user%>
-    
-    <div class="container">
+    <div class="container-md">
       <% flash.each do |message_type, message| %>
         <div class="alert alert-<%= message_type %>"><%= message %></div>
       <% end %>
