--- a/app/views/preferences/index.html.erb
+++ b/app/views/preferences/index.html.erb
@@ -1,24 +1,31 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Room Preferences</h1>
-
-<table>
-  <thead>
+<br>
+<%= render 'form'%>
+<br>
+<p class="text-left">total results: <%= @count%></p>
+<table class="table table-striped table-hover">
+  <thead class="thead-dark">
     <tr>
-      <th>Location</th>
-      <th>Start Date</th>
-      <th>End Date</th>
-      <th colspan="4"></th>
+        <th>Name</th>
+        <th><%= sortable "min_price"%></th>
+        <th><%= sortable "max_price"%></th>
+        <th><%= sortable "start_date"%></th>
+        <th><%= sortable "end_date"%></th>
+        <th>Pet Preference</th>
     </tr>
   </thead>
 
   <tbody>
-    <% @preferences.each do |pref| %>
-      <tr>
-        <td><%= pref.location %></td>
-        <td><%= pref.start %></td>
-        <td><%= pref.end %></td>
-      </tr>
-    <% end %>
+        <%  @preferences.each do |p| %>
+        <tr>
+            <td><%= p.user.name %></td>
+            <td><%= p.min_price %></td>
+            <td><%= p.max_price %></td>
+            <td><%= p.start_date %></td>
+            <td><%= p.end_date %></td>
+            <td><%= p.pet %></td>
+        </tr>
+    <% end %> 
   </tbody>
 </table>
+<%= will_paginate @preferences, renderer: WillPaginate::ActionView::BootstrapLinkRenderer, 
+list_classes: %w(pagination justify-content-center) %>
