improve sign up UI

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,9 @@
 <footer class="footer">
-  <small>
-    Underroof By Team 7
-  </small>
+  <div class="container">
+    <small>
+      Underroof By Team 7
+    </small>
+
   <!--
   <nav>
     <ul>
@@ -9,5 +11,5 @@
     </ul>
   </nav>
   -->
-  
+  </div>
 </footer>
