--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,14 @@
-<h1>Sign Up</h1>
-
-<%= render 'form', user: @user %>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-12">
+            <h1>Sign Up</h1>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-6">
+            <%= render 'form', user: @user %>
+        </div>
+    </div>
+</div>
 
 <!--<button class="btn new"><%= link_to 'Back', users_path %></button>-->
