--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,6 +3,7 @@
     <ul class="navbar-nav ml-auto">
         <% if logged_in? %>
             <li class="nav-link"><%= link_to 'Search', search_path %></li>
+            <li class="nav-link"><%= link_to 'Profile', edit_user_path(current_user) %></li>
             <li class="nav-link"><%= link_to 'Log out', logout_path, method: :delete %></li>
         <% else %>
             <li class="nav-link"><%= link_to 'Sign up', signup_path%></li>
