add admin function

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,12 +1,16 @@
 <nav class="navbar navbar-expand-lg navbar-fixed-top navbar-dark bg-dark">
     <%= link_to "Home", "/", id:"home"%>
     <ul class="navbar-nav ml-auto">
-        <% if logged_in? %>
+        <% if logged_in? and admin_user?%>
+            <li class="nav-link"><%= link_to 'Search', search_path %></li>
+            <li class="nav-link"><%= link_to 'Data', underoofadmin_path, method: :get %></li>
+            <li class="nav-link"><%= link_to 'Log out', logout_path, method: :delete %></li>
+        <% elsif logged_in? and !admin_user?%>
             <li class="nav-link"><%= link_to 'Search', search_path %></li>
             <li class="nav-link"><%= link_to 'Profile', edit_user_path(current_user) %></li>
             <li class="nav-link"><%= link_to 'Log out', logout_path, method: :delete %></li>
         <% else %>
-            <li class="nav-link"><%= link_to 'Sign up', signup_path%></li>
+            <li class="nav-link"><%= link_to 'Sign up', signup_path%></li>  
             <li class="nav-link"><%= link_to 'Sign in', signin_path%></li>
         <% end %>
     </ul>  
