--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -8,3 +8,13 @@
     </div>
   </div>
 </div>
+
+<h1>Perference information</h1>
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3">
+      <%= render 'form' %>
+    </div>
+  </div>
+</div>
