--- a/app/views/preferences/_form.html.erb
+++ b/app/views/preferences/_form.html.erb
@@ -2,6 +2,10 @@
     <%= f.hidden_field :direction, value: params[:direction] %>
     <%= f.hidden_field :sort, value: params[:sort] %>
 
+    <%= f.collection_select :state_id, State.order(:name), :two_digit_code, :name%>
+    <%= f.grouped_collection_select :county_id, State.order(:name), :counties, :name, :id, :name%>
+    <%= f.grouped_collection_select :city_id, County.order(:name), :cities, :name, :id, :name%>
+
     <%= f.label "Min Price"%>
     <%= f.number_field :min_price, in: 0..2500, step: 100, value: params[:min_price] %>
 
