--- a/app/views/preferences/_form.html.erb
+++ b/app/views/preferences/_form.html.erb
@@ -3,16 +3,13 @@
     <%= f.hidden_field :sort, value: params[:sort] %>
 
     <%= f.label :state_label, "State" %>
-    <%= f.collection_select :state_id, State.order(:name), :id, :name, include_blank: true %>
+    <%= f.collection_select :state_id, State.order(:name), :id, :name, include_blank: "-----Select State---", selected: params[:state_id] %>
 
     <%= f.label :county_label, "County" %>
-    <%= f.grouped_collection_select :county_id, State.order(:name), :counties, :name, :id, :name, include_blank: true %>
-
-    <%= f.label :city_label, "City"%>
-    <%= f.grouped_collection_select :city_id, County.order(:name), :cities, :name, :id, :name, include_blank: true %>
+    <%= f.grouped_collection_select :county_id, State.order(:name), :counties, :id, :id, :name, include_blank: true, selected: params[:county_id] %>
 
     <%= f.label "Min Price"%>
-    <%= f.number_field :min_price, in: 0..2500, step: 100, value: params[:min_price] %>
+    <%= f.number_field :min_price, in: 0..2500, step: 100, value: params[:min_price]%>
 
     <%= f.label "Max Price"%>
     <%= f.number_field :max_price, in: 0..5000, step: 100, value: params[:max_price]%>
