--- a/app/views/preferences/show.html.erb
+++ b/app/views/preferences/show.html.erb
@@ -5,7 +5,8 @@
 
 <h3>Roommate Preferences</h3>
 <p>State: <%= State.find(@preference.state_id).name%></p>
-<p>County: <%= County.find(@preference.county_id).name%></p>
+<p>City: <%= City.find(@preference.city_id).name%></p>
+<p>Location: <%= @preference.location%></p>
 <p>Price: $<%= @preference.min_price%> - $<%= @preference.max_price%></p>
 <p>Date: <%= @preference.start_date%> - <%= @preference.end_date%></p>
 <p>Pet preference: <%= @preference.pet%></p>
