--- a/app/views/preferences/show.html.erb
+++ b/app/views/preferences/show.html.erb
@@ -9,4 +9,4 @@
 <p>Price: $<%= @preference.min_price%> - $<%= @preference.max_price%></p>
 <p>Date: <%= @preference.start_date%> - <%= @preference.end_date%></p>
 <p>Pet preference: <%= @preference.pet%></p>
-<%= link_to "Let's chat!", "#"%>
+<%= link_to "Let's chat!", "/chat"%>
