--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,23 +1,21 @@
-<div class="row">
-  <div class="col-12 col-md-3">
-    <%= render partial: 'rooms' %>
-  </div>
+<div class="container">
+  <p></p>
+  <div class="row">
+    <div class="col-12 col-md-3">
+      <%= render partial: 'rooms' %>
+    </div>
 
-  <div class="col">
-    <div class="alert alert-primary">
-      <h4 class="alert-heading">
-        Welcome to the RailsChatTutorial!
-      </h4>
-
-      <p>
-        We need to talk.
-      </p>
-
-      <hr />
-
-      <p>
-        You can create or join a room from the sidebar.
-      </p>
+    <div class="col">
+      <div class="alert alert-primary">
+        <h4 class="alert-heading">
+          Welcome to the Underoof! </br>
+          You can create and post message in here for searching your like!
+        </h4>
+        <hr/>
+        <p>
+          You can create or join a room from the sidebar.
+        </p>
+      </div>
     </div>
   </div>
 </div>
