Seed with 500 users and preferences and change max number of results shown on each page to 10

--- a/app/views/preferences/_form.html.erb
+++ b/app/views/preferences/_form.html.erb
@@ -3,7 +3,7 @@
     <%= f.hidden_field :sort, value: params[:sort] %>
 
     <%= f.label :state_label, "State" %>
-    <%= f.select :state, options_for_select(CS.states(:us).invert, params[:state])%>
+    <%= f.select :state, options_for_select(CS.states(:us).except(:DC).invert, params[:state])%>
 
     <%= f.label :county_label, "City" %>
     <%= f.select :city, options_for_select({}, params[:city]) %>
