--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_for @user, local: true do |f| %>
-    <%= render 'shared/error_messages' %>
+    <%= render 'shared/error_messages', object: f.object %>
 
     <div class="form-group">
       <%= f.text_field :name, class: "form-control", placeholder: "User Name" %>
