Finish room preference profile page except state city drop down

--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -3,8 +3,8 @@
 </div>
 <div class = "row">
     <%if current_user.preference.nil?%>
-    <%= link_to "Room Preference", new_preference_path%>
-    <%else%>
-    <%= link_to "Room Preference", "#"%>
+        <%= link_to "Room Preference", new_preference_path%>
+    <% else %>
+        <%= link_to "Room Preference", edit_preference_path(current_user.preference)%>
     <%end%>
 </div>
