--- a/app/views/preferences/_new_form.html.erb
+++ b/app/views/preferences/_new_form.html.erb
@@ -1,33 +1,38 @@
 <%= form_with(model: @preference, local: true) do |f| %>
 
     <%= render 'shared/error_messages', object: f.object %>
-    
+
+    <div class="form-group">
     <%= render "state_city_select"%>
-    <%if false%>
-    <%= label_tag "State"%>
-    <%= text_field_tag :state_name %>
+    </div>
 
-    <%= label_tag "City"%>
-    <%= text_field_tag :city_name %>
-    <%end%>
-
+    <div class="form-group">
     <%= f.label "Location"%>
-    <%= f.text_area  :location, value: params[:location]%>
+    <%= f.text_field  :location %>
+    </div>
 
+    <div class="form-group">
     <%= f.label "Min Price"%>
-    <%= f.number_field :min_price, value: params[:min_price]%>
+    <%= f.number_field :min_price, required: true %>
 
     <%= f.label "Max Price"%>
-    <%= f.number_field :max_price, value: params[:max_price]%>
+    <%= f.number_field :max_price, required: true %>
+    </div>
 
+    <div class="form-group">
     <%= f.label "Start Date"%>
-    <%= f.date_field :start_date, value: params[:start_date] %>
+    <%= f.date_field :start_date %>
 
     <%= f.label "End Date"%>
-    <%= f.date_field :end_date, value: params[:end_date] %>
+    <%= f.date_field :end_date %>
+    </div>
 
+    <div class="form-group">
     <%= f.label "Pet Preference"%>
-    <%= f.select :pet,["Dog", "Cat", "No"], selected: params[:pet], include_blank: true, selected: params[:pet] %>
-    
+    <%= f.select :pet,["Dog", "Cat", "No"], include_blank: true%>
+    </div>
+
+    <div class="form-group">
     <%= f.submit yield(:button_text)%>
+    </div>
 <% end %>
