--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -10,7 +10,7 @@
     </div>
 
     <div class="form-group">
-      <%= f.password_field :password, class: "form-control", placeholder: "Password" %>
+      <%= f.password_field :password, class: "form-control", placeholder: "Password: Upper&Lower, Number, Total Length 8-15" %>
     </div>
 
     <div class="form-group">
