Add bootstrap templates

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,15 +1,30 @@
-<footer class="footer">
-  <div class="container">
-    <small>
-      Underroof By Team 7
-    </small>
+<% if 5==3%>
+  <footer class="footer">
+    <div class="container">
+      <small>
+        Underroof By Team 7
+      </small>
 
-  <!--
-  <nav>
-    <ul>
-        <li><%= link_to "Users",   '/users' %></li>
-    </ul>
-  </nav>
-  -->
-  </div>
+    <!--
+    <nav>
+      <ul>
+          <li><%= link_to "Users",   '/users' %></li>
+      </ul>
+    </nav>
+    -->
+    </div>
+  </footer>
+<% end %>
+
+<footer class="footer-container">
+        
+	        <div class="container">
+	        	<div class="row">
+	        		
+                    <div class="col">
+                    	&copy; Bootstrap 4 Carousel Template. Download it for free on <a href="https://azmind.com">AZMIND</a>.
+                    </div>
+                    
+                </div>
+	        </div>            	
 </footer>
