--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,7 +1,289 @@
-<section class="home-form">
-<%= render 'form'%>
-</section>
+<% if 5==3%>
+    <section class="home-form">
+    <%= render 'form'%>
+    </section>
 
-<% if !logged_in?%>
-<%= link_to "Sign up now!", signup_path%>
-<% end %>
+    <% if !logged_in?%>
+    <%= link_to "Sign up now!", signup_path%>
+    <% end %>
+<%end%>
+
+<!-- Top content -->
+<div class="top-content">
+    <div class="row no-gutters">
+        <div class="col">
+            <div id="carousel-example" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="assets/img/backgrounds/1.jpg" class="d-block w-100" alt="img1">
+                        <div class="carousel-caption">
+                            <h1 class="wow fadeInLeftBig">Carousel Template with Bootstrap 4</h1>
+                        <div class="description wow fadeInUp">
+                                <p>
+                                    This is a free Carousel template made with the Bootstrap 4 framework.
+                                    Check it out now. Download it, customize and use it as you like!
+                                </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/img/backgrounds/2.jpg" class="d-block w-100" alt="img2">
+                    <div class="carousel-caption">
+                        <h1 class="wow fadeInLeftBig">This is Slide 2 of our Carousel</h1>
+                        <div class="description wow fadeInUp">
+                            <p>
+                                You can download this free template on <a href="https://azmind.com" target="_blank">AZMIND</a>.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/img/backgrounds/3.jpg" class="d-block w-100" alt="img3">
+                    <div class="carousel-caption">
+                        <h1 class="wow fadeInLeftBig">This is Slide 3, the Last One</h1>
+                        <div class="description wow fadeInUp">
+                            <p>
+                                After you download it, you can customize and use it as you like. That's great!
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+  <!-- Section 1 -->
+        <div class="section-1-container section-container">
+	        <div class="container">
+	            <div class="row">
+	                <div class="col section-1 section-description wow fadeIn">
+	                    <h2>Section 1</h2>
+	                    <div class="divider-1 wow fadeInUp"><span></span></div>
+	                </div>
+	            </div>
+	            <div class="row">
+                	<div class="col-md-4 section-1-box wow fadeInUp">
+                		<div class="row">
+                			<div class="col-md-4">
+			                	<div class="section-1-box-icon">
+			                		<i class="fas fa-magic"></i>
+			                	</div>
+		                	</div>
+	                		<div class="col-md-8">
+	                    		<h3>Branding</h3>
+	                    		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.</p>
+	                    	</div>
+	                    </div>
+                    </div>
+                    <div class="col-md-4 section-1-box wow fadeInDown">
+	                	<div class="row">
+                			<div class="col-md-4">
+			                	<div class="section-1-box-icon">
+			                		<i class="fas fa-cog"></i>
+			                	</div>
+		                	</div>
+	                		<div class="col-md-8">
+	                    		<h3>Web design</h3>
+	                    		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.</p>
+	                    	</div>
+	                    </div>
+                    </div>
+                    <div class="col-md-4 section-1-box wow fadeInUp">
+	                	<div class="row">
+                			<div class="col-md-4">
+			                	<div class="section-1-box-icon">
+			                		<i class="fab fa-twitter"></i>
+			                	</div>
+		                	</div>
+	                		<div class="col-md-8">
+	                    		<h3>Social media</h3>
+	                    		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.</p>
+	                    	</div>
+	                    </div>
+                    </div>
+	            </div>
+	        </div>
+        </div>
+  <!-- Section 1 -->
+        <div class="section-1-container section-container">
+	        <div class="container">
+	            <div class="row">
+	                <div class="col section-1 section-description wow fadeIn">
+	                    <h2>Section 1</h2>
+	                    <div class="divider-1 wow fadeInUp"><span></span></div>
+	                </div>
+	            </div>
+	            <div class="row">
+                	<div class="col-md-4 section-1-box wow fadeInUp">
+                		<div class="row">
+                			<div class="col-md-4">
+			                	<div class="section-1-box-icon">
+			                		<i class="fas fa-magic"></i>
+			                	</div>
+		                	</div>
+	                		<div class="col-md-8">
+	                    		<h3>Branding</h3>
+	                    		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.</p>
+	                    	</div>
+	                    </div>
+                    </div>
+                    <div class="col-md-4 section-1-box wow fadeInDown">
+	                	<div class="row">
+                			<div class="col-md-4">
+			                	<div class="section-1-box-icon">
+			                		<i class="fas fa-cog"></i>
+			                	</div>
+		                	</div>
+	                		<div class="col-md-8">
+	                    		<h3>Web design</h3>
+	                    		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.</p>
+	                    	</div>
+	                    </div>
+                    </div>
+                    <div class="col-md-4 section-1-box wow fadeInUp">
+	                	<div class="row">
+                			<div class="col-md-4">
+			                	<div class="section-1-box-icon">
+			                		<i class="fab fa-twitter"></i>
+			                	</div>
+		                	</div>
+	                		<div class="col-md-8">
+	                    		<h3>Social media</h3>
+	                    		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.</p>
+	                    	</div>
+	                    </div>
+                    </div>
+	            </div>
+	        </div>
+        </div>
+
+        <!-- Section 2 -->
+        <div class="section-2-container section-container section-container-gray-bg">
+	        <div class="container">
+	            <div class="row">
+	                <div class="col section-2 section-description wow fadeIn">
+	                </div>
+	            </div>
+	            <div class="row">
+	            	<div class="col section-2-box wow fadeInLeft">
+                    	<h3>Section 2</h3>
+                    	<p class="medium-paragraph">
+                    		Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
+                    		sed do eiusmod tempor incididunt ut labore et. Ut wisi enim ad minim veniam, quis nostrud.
+                    	</p>
+                    	<p>
+                    		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.
+                    		Ut wisi enim ad minim veniam, quis nostrud. 
+                    		Exerci tation ullamcorper suscipit <a href="#">lobortis nisl</a> ut aliquip ex ea commodo consequat. 
+                    		Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl. 
+                    	</p>
+                    	<p>
+                    		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.
+                    		Ut wisi enim ad minim veniam, quis nostrud. 
+                    		Exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+                    	</p>
+	                </div>
+	            </div>
+	        </div>
+        </div>
+
+		<!-- Section 3 -->
+        <div class="section-3-container section-container">
+	        <div class="container">
+	        	
+	            <div class="row">
+	                <div class="col section-3 section-description wow fadeIn">
+	                    <h2>Section 3</h2>
+	                    <div class="divider-1 wow fadeInUp"><span></span></div>
+	                </div>
+	            </div>
+	            
+	            <div class="row">
+	                <div class="col-md-6 section-3-box wow fadeInLeft">
+	                	<div class="row">
+	                		<div class="col-md-3">
+	                			<div class="section-3-box-icon">
+	                				<i class="fas fa-paperclip"></i>
+	                			</div>
+	                		</div>
+	                		<div class="col-md-9">
+	                			<h3>Ut wisi enim ad minim</h3>
+		                    	<p>
+		                    		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.
+		                    		Ut wisi enim ad minim veniam, quis nostrud.
+		                    	</p>
+	                		</div>
+	                	</div>
+	                </div>
+	                <div class="col-md-6 section-3-box wow fadeInLeft">
+	                	<div class="row">
+	                		<div class="col-md-3">
+	                			<div class="section-3-box-icon">
+	                				<i class="fas fa-pencil-alt"></i>
+	                			</div>
+	                		</div>
+	                		<div class="col-md-9">
+	                			<h3>Sed do eiusmod tempor</h3>
+		                    	<p>
+		                    		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.
+		                    		Ut wisi enim ad minim veniam, quis nostrud.
+		                    	</p>
+	                		</div>
+	                	</div>
+	                </div>
+	            </div>
+	            
+	            <div class="row">
+	                <div class="col-md-6 section-3-box wow fadeInLeft">
+	                	<div class="row">
+	                		<div class="col-md-3">
+	                			<div class="section-3-box-icon">
+	                				<i class="fas fa-cloud"></i>
+	                			</div>
+	                		</div>
+	                		<div class="col-md-9">
+	                			<h3>Quis nostrud exerci tat</h3>
+		                    	<p>
+		                    		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.
+		                    		Ut wisi enim ad minim veniam, quis nostrud.
+		                    	</p>
+	                		</div>
+	                	</div>
+	                </div>
+	                <div class="col-md-6 section-3-box wow fadeInLeft">
+	                	<div class="row">
+	                		<div class="col-md-3">
+	                			<div class="section-3-box-icon">
+	                				<i class="fab fa-google"></i>
+	                			</div>
+	                		</div>
+	                		<div class="col-md-9">
+	                			<h3>Minim veniam quis nostrud</h3>
+		                    	<p>
+		                    		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.
+		                    		Ut wisi enim ad minim veniam, quis nostrud.
+		                    	</p>
+	                		</div>
+	                	</div>
+	                </div>
+	            </div>
+
+	        </div>
+        </div>
+
+		<!-- Section 4 -->
+        <div class="section-4-container section-container section-container-image-bg">
+	        <div class="container">
+	            <div class="row">
+	                <div class="col section-4 section-description wow fadeInLeftBig">
+	                	<h2>Section 4</h2>
+	                    <p>
+	                    	Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut 
+	                    	aliquip ex ea commodo consequat. Ut wisi enim ad minim veniam, quis nostrud.
+	                    </p>
+	                </div>
+	            </div>
+	        </div>
+        </div>
