--- a/app/views/preferences/_new_form.html.erb
+++ b/app/views/preferences/_new_form.html.erb
@@ -3,6 +3,11 @@
     <%= render 'shared/error_messages', object: f.object %>
 
     <div class="form-group">
+    <%= @old_state%>
+    <%= @old_city%>
+    </div>
+
+    <div class="form-group">
     <%= render "state_city_select"%>
     </div>
 
