--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -1,9 +1,36 @@
-<p id="notice"><%= notice %></p>
+<div class="row">
+  <div class="col-sm-2">
+    <div class="d-flex justify-content-between">
+      <h6>Channels</h6>
+      <%= link_to icon("fas", "plus"), new_channel_path %>
+    </div>
 
-<p>
-  <strong>Name:</strong>
-  <%= @channel.name %>
-</p>
+    <% Channel.all.each do |channel| %>
+      <div>
+        <%= link_to channel.name, channel %>
+        <% if current_user.channels.include?(channel) %>
+          <%= link_to icon("fas", "times"), channel_channel_user_path(channel), method: :delete %>
+        <% end %>
+      </div>
+    <% end %>
 
-<%= link_to 'Edit', edit_channel_path(@channel) %> |
-<%= link_to 'Back', channels_path %>
+    <hr/>
+
+    <div class="d-flex justify-content-between">
+      <h6>User</h6>
+    </div>
+    <% @channel.users.each do |user| %>
+      <div>
+        <%= user.name %>
+      </div>
+    <% end %>
+  </div>
+
+  <div class="col-sm-10">
+    <% if current_user.channels.include?(@channel) %>
+    
+    <% else %>
+      <%= link_to "Join #{@channel.name}", channel_channel_user_path(@channel), method: :post %>
+    <% end %>
+  </div>
+</div>
